--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .secondary {
   font-size: 13px !important;
-  font-family: 'DIN,sans-serif' !important;
+  font-family: 'Montserrat, sans-serif' !important;
   /* line-height: 1.42857143' */
 }
 
@@ -14,3 +14,10 @@
 .margin-general {
   margin: 15px 0px 5px 15px !important
  }
+
+ .panelMainDiv {
+  border: 1px solid;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 5px;
+}
