--- a/src/views/ProductsReports/Issues/File/File.css
+++ b/src/views/ProductsReports/Issues/File/File.css
@@ -1,5 +1,6 @@
 .display-div {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   
 }
@@ -12,8 +13,8 @@
   display: inline;
   color: #263238;
   font-size: 16px;
-  font-family: DIN,sans-serif;
-  font-weight: 500;
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 400;
   line-height: 1.6;
   letter-spacing: -0.05px;
   text-transform: capitalize;
