--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: inline;
   color: #263238;
   font-size: 16px;
-  font-family: 'Montserrat', sans-serif !important;
+  font-family: "Montserrat", sans-serif !important;
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: -0.05px;
@@ -13,7 +13,7 @@
 
 .secondary {
   font-size: 13px !important;
-  font-family: 'Montserrat, sans-serif' !important;
+  font-family: "Montserrat, sans-serif" !important;
   /* line-height: 1.42857143' */
 }
 
@@ -25,33 +25,43 @@
 }
 
 .margin-general {
-  margin: 15px 0px 5px 15px !important
- }
+  margin: 15px 0px 5px 15px !important;
+}
 
- .panelMainDiv {
+.panelMainDiv {
   border: 1px solid;
   border-bottom: 0px;
   border-radius: 5px;
   padding: 5px;
 }
 
-.panelMainDiv:last-child
-{
-    border-bottom:1px solid;
+.panelMainDiv:last-child {
+  border-bottom: 1px solid;
 }
 
 .paper {
   padding: 10px;
-  text-align: 'left';
-  overflow: 'auto';
+  text-align: "left";
+  overflow: "auto";
 }
 
 .red-font {
   color: red !important;
-    font-size: 18px !important;
-    font-family: 'Montserrat', sans-serif !important;
+  font-size: 18px !important;
+  font-family: "Montserrat", sans-serif !important;
 }
 
 .divider {
-  margin-bottom: '5px';
+  margin-bottom: "5px";
+}
+
+.odd-even-background:nth-of-type(odd) {
+  background: #e7e7ef;
+}
+
+.severity-div {
+  text-align: center;
+  border-radius: 10px solid;
+  border-style: outset;
+  padding: 5px;
 }
