--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: inline;
   color: #263238;
   font-size: 16px;
-  font-family: "Montserrat", sans-serif !important;
+  font-family: "Roboto","Helvetica","Arial",sans-serif !important;
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: -0.05px;
@@ -13,7 +13,7 @@
 
 .secondary {
   font-size: 13px !important;
-  font-family: "Montserrat, sans-serif" !important;
+  font-family: "Roboto","Helvetica","Arial",sans-serif !important;
   /* line-height: 1.42857143' */
 }
 
@@ -48,7 +48,7 @@
 .red-font {
   color: red !important;
   font-size: 18px !important;
-  font-family: "Montserrat", sans-serif !important;
+  font-family: "Roboto","Helvetica","Arial",sans-serif !important;
 }
 
 .divider {
@@ -67,4 +67,19 @@
 
 .MuiContainer-maxWidthLg{
   max-width: none !important;
+}
+
+.background-shadow {
+  background: linear-gradient(60deg, #ec407a, #d81b60);
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.14),
+    0 7px 10px -5px rgba(233, 30, 99, 0.4);
+  color: white;
+}
+
+.background-margin {
+  width: fit-content;
+  padding: 8px;
+  margin-top: -20px;
+  margin-left: -13px;
+  height: fit-content;
 }
