--- a/src/views/Feed/TabsData/TabsData.css
+++ b/src/views/Feed/TabsData/TabsData.css
@@ -9,20 +9,35 @@
 }
 
 .language-icon {
-  margin-top: -66px;
-  margin-left: -62px;
+  margin-top: -30px;
+  margin-left: -44px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 100%;
+}
+
+.count {
+  display: flex;
+  margin-right: -126px;
+}
+
+.sub-title {
+  margin-left: -32px;
 }
 
 .cve-pie-chart {
   height: fit-content;
   margin-top: 20px;
-  border: 1px solid;
-  border-color: darkorange;
+  /* border: 1px solid; */
+  /* border-color: darkorange; */
   padding: 4px;
-  width: 250px;
+  width: 204px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  /* border-radius: 12px; */
+  box-shadow: 10px 10px 10px #f1be81;
 }
 
 .cve-pie-chart-title {
@@ -31,16 +46,16 @@
 }
 
 .cve-pie-chart-right {
-  margin-left: 91px !important;
+  /* margin-left: 40px !important; */
   margin-top: -40px;
 }
 
 .cve-pie-chart-right:hover {
-  transition: all .4s ease;
+  transition: all 0.4s ease;
   margin-top: -60px;
 }
 
-.cve-pie-chart-right:hover:after{
+.cve-pie-chart-right:hover:after {
   margin-top: -40px;
-  margin-left: 91px !important;
+  /* margin-left: 40px !important; */
 }
