--- a/src/views/ProductsReports/Issues/File/File.css
+++ b/src/views/ProductsReports/Issues/File/File.css
@@ -13,7 +13,7 @@
   display: inline;
   color: #263238;
   font-size: 16px;
-  font-family: 'Montserrat', sans-serif !important;
+  font-family: "Roboto","Helvetica","Arial",sans-serif !important;
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: -0.05px;
