--- a/src/views/ProjectsReports/ProjectsReports.css
+++ b/src/views/ProjectsReports/ProjectsReports.css
@@ -42,10 +42,11 @@
 
 .scoreblock-div{display: flex;}
 .scoreblock {padding:0 5px;}
-.scoreblock-inner{display: table;width: 100%;height: 45px;border-radius: 5px;background: #fff;  }
+.scoreblock-inner{display: table;width: 100%;height: 30px;border-radius: 5px;background: #fff;  }
 .scoreblock-inner > div{display: table-cell; vertical-align: middle;padding: 5px;font-size: 14px; font-weight: 600; text-align: center;}
 .scoretitle{border: 1px solid #d0d8e5;border-radius: 3px 0 0 3px; color: #333;}
-.scorevalue{background: #027ae2; color: #fff;border-radius: 0px 3px 3px 0px;}
+
+.scorevalue{background: #027ae2; color: #fff;border-radius: 0px 3px 3px 0px;border-right: 1px solid #d0d8e5;border-bottom:1px solid #d0d8e5;border-top:1px solid #d0d8e5;}
 
 .niahmeterleft h2{font-size: 16px;font-weight: 600;margin-bottom: 10px;}
 .niahmeterleft h2 a{text-decoration: none;color: #e43838} 
@@ -82,6 +83,7 @@ width:100% !important;
 }
 
 
+
 .scoreblock-severity-div .scoreblock,.scoreblock-vulnerabilities-div .scoreblock{float:left;margin: 0 10px;}
 .snapshot-title { margin-bottom: 5px; }
 .scoreblock-severity-div .scoreblock:nth-child(1) .scoretitle { background: #980000;}
@@ -91,9 +93,31 @@ width:100% !important;
 .scoreblock-severity-div .scorevalue {background: #fff;color:#000;}
 .scoreblock-severity-div .scoreblock-inner{ border: 1px solid grey;}
 
+ .small-table .MuiTableCell-body, .big-table .MuiTableCell-body { white-space: pre-line;} 
+
+table.small-table tr th:nth-child(n+4) {
+	display: none;
+}
+table.small-table tr td:nth-child(n+4) {
+	display: none;
+}
+table.small-table tr th:nth-child(8) {
+	display: block;
+}
+table.small-table tr td:nth-child(8) {
+	display: block;
+}
+
+.scoreblock-vulnerabilities-div div {
+	margin: 0px !important;
+}
+
+.small-table,.big-table{
+	background: #fff;
+}  
 @media only screen and (min-width:1700px){
 
-.cvesearchcenter .MuiTableCell-root{padding: 20px}
+.cvesearchcenter .MuiTableCell-root{padding: 15px}
 td.MuiTableCell-root.MuiTableCell-body.loading-cell {
     padding: 0px 5px;
 }
