--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,15 @@ button:focus{
   font-size: 15px;
   font-weight: 500;
 }
+.countryDropdown select,.RegionDropdown select{border: 1px solid rgba(0, 0, 0, 0.26);padding: 18.5px 14px;font-size: 13px;font-family: "Montserrat",sans-serif !important;font-weight: 400;line-height: 1.1876em;border-radius: 4px;width: 100%;height: 55px;}
+.countryDropdown select:hover,.RegionDropdown select:hover{border-color: #263238;}
+.countryDropdown select:focus,.RegionDropdown select:focus{border-color: #3949ab;box-shadow: 0 0 4px 0 #3949ab  }
 
+.head-inner-title h3 {
+    font-size: 22px;
+    color: #666666;
+    font-weight: 600;
+}
 
 @media(min-width:767px) and (max-width:959px){
   .bannerBox .bannerContent{
